--- a/html/index.html
+++ b/html/index.html
@@ -7,14 +7,19 @@
 </head>
 <body class="body_index">
 
- <h1>人工知能同好会</h1>
+ <div style="padding-bottom: 64px;"></div>
+
+ <div id="top">
  <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。</p>
+
+ <div id="about">
  <h2>紹介</h2>
  <div class="parent">
   <div class="card"><a href=""><img src="image/test02.png"><h1>メンバー紹介</h1><h3>2018.03.30</h3><p>同好会メンバーの紹介です。</p></a></div>
   <div class="card"><a href=""><img src="image/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
  
+<div id="log">
  <h2>活動記録</h2>
  <div class="parent">
   <div class="card"><a href=""><img src="image/test.png"><h1>機械学習 No.001</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
@@ -22,6 +27,26 @@
   <div class="card"><a href=""><img src="image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
  </div>
 
+ <div id="update">
+ <h2>更新記録</h2>
+ <ul class="logul">
+  <li>2018.03.30 活動記録「機械学習 No.001」を追加しました。</li>
+  <li>2018.02.22 活動記録「新しいPCパーツ」を追加しました。</li>
+  <li>2018.02.11 活動記録「グラボを挿した結果...」を追加しました。</li>
+  <li>2018.01.15 人工知能同好会のページを作成しました。</li>
+ </ul>
+
  <p>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</p>
+
+ <nav class="navbar">
+  <h1 class="navh1">人工知能同好会</h1>
+  <ul class="navul nav">
+   <li><a href="#top">TOP</a></li>
+   <li><a href="#about">ABOUT</a></li>
+   <li><a href="#log">LOG</a></li>
+   <li><a href="#update">UPDATE</a></li>
+  </ul>
+ </nav>
+
 </body>
 </html>
