--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="css/base.css">
+ <link rel="stylesheet" type="text/css" href="css/scroll.css">
  <title>人工知能同好会</title>
 </head>
 <body class="body_index">
