メンバー紹介のページを追加

--- a/html/index.html
+++ b/html/index.html
@@ -17,28 +17,27 @@
  <div id="about">
  <h2>紹介</h2>
  <div class="parent">
-  <div class="card"><a href=""><img src="image/test02.png"><h1>メンバー紹介</h1><h3>2018.03.30</h3><p>同好会メンバーの紹介です。</p></a></div>
-  <div class="card"><a href=""><img src="image/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
+  <div class="card"><a href="html/member.html"><img src="image/test02.png"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
+  <div class="card"><a href="html/plans.html"><img src="image/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
  
 <div id="log">
  <h2>活動記録</h2>
  <div class="parent">
-  <div class="card"><a href=""><img src="image/test.png"><h1>機械学習 No.001</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
-  <div class="card"><a href=""><img src="image/test03.png"><h1>新しいPCパーツ</h1><h3>2018.02.22</h3><p>PCIx1でUSB3.0を2つ増設しました。</p></a></div>
-  <div class="card"><a href=""><img src="image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
+  <div class="card"><a href="html/log_18-0330a.html"><img src="image/test.png"><h1>機械学習 No.001</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
+  <div class="card"><a href="html/log_18-0222a.html"><img src="image/test03.png"><h1>新しいPCパーツ</h1><h3>2018.02.22</h3><p>PCIx1でUSB3.0を2つ増設しました。</p></a></div>
+  <div class="card"><a href="html/log_18-0211a.html"><img src="image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
  </div>
 
  <div id="update">
  <h2>更新記録</h2>
  <ul class="logul">
+  <li>2018.03.31 メンバー紹介のページを更新しました。</li>
   <li>2018.03.30 活動記録「機械学習 No.001」を追加しました。</li>
   <li>2018.02.22 活動記録「新しいPCパーツ」を追加しました。</li>
   <li>2018.02.11 活動記録「グラボを挿した結果...」を追加しました。</li>
   <li>2018.01.15 人工知能同好会のページを作成しました。</li>
  </ul>
-
- <p>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</p>
 
  <nav class="navbar">
   <h1 class="navh1">人工知能同好会</h1>
@@ -49,6 +48,8 @@
    <li><a href="#update">UPDATE</a></li>
   </ul>
  </nav>
+
+ <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
 </body>
 </html>
