サブページのナビゲーションをJavaScriptで表示
書き換えるときに全部書き換えるの面倒だから...
他の方法でできたらもっと見やすく書けるんだけどなあ...

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,8 @@
  <div style="padding-bottom: 64px;"></div>
 
  <div id="top">
- <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。</p>
+ <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。<br>
+ JavaScriptを使用して表示している部分があります。</p>
 
  <div id="about">
  <h2>紹介</h2>
