--- a/html/html/log_18-0330a.html
+++ b/html/html/log_18-0330a.html
@@ -5,9 +5,10 @@
  <link rel="stylesheet" type="text/css" href="../css/base.css">
  <link rel="stylesheet" type="text/css" href="../css/scroll.css">
  <link rel="shortcut icon" href="../image/icon.ico" type="/image/vnd.microsoft.icon">
+ <script type="text/javascript" src="../js/include.js"></script>
  <title>人工知能同好会</title>
 </head>
-<body class="body_index">
+<body class="body_index" onload="include();">
 
  <div style="padding-bottom: 64px;"></div>
 
@@ -16,15 +17,7 @@
 
  <p>テストのページです。活動内容を書きます。画像を載せることももちろんできます。</p>
 
- <nav class="navbar">
-  <h1 class="navh1">人工知能同好会</h1>
-  <ul class="navul nav">
-   <li><a href="../index.html#top">TOP</a></li>
-   <li><a href="../index.html#about">ABOUT</a></li>
-   <li><a href="../index.html#log">LOG</a></li>
-   <li><a href="../index.html#update">UPDATE</a></li>
-  </ul>
- </nav>
+ <div id="target_nav"></div>
 
  <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
