--- a/html/html/member.html
+++ b/html/html/member.html
@@ -6,9 +6,10 @@
  <link rel="stylesheet" type="text/css" href="../css/scroll.css">
  <link rel="stylesheet" type="text/css" href="../css/member.css">
  <link rel="shortcut icon" href="../image/icon.ico" type="/image/vnd.microsoft.icon">
+ <script type="text/javascript" src="../js/include.js"></script>
  <title>人工知能同好会</title>
 </head>
-<body class="body_index">
+<body class="body_index" onload="include();">
 
  <div style="padding-bottom: 64px;"></div>
 
@@ -30,15 +31,16 @@
   <li><div class="nameset">コメント</div><div class="nameset2">Webページを作らせていただきました。使ったツールは基本的にメモ帳です...。他にも使えるツールを増やしたい...。最近はアルバイトを入れすぎて何もできてません...。</div></li>
  </ul>
 
- <nav class="navbar">
-  <h1 class="navh1">人工知能同好会</h1>
-  <ul class="navul nav">
-   <li><a href="../index.html#top">TOP</a></li>
-   <li><a href="../index.html#about">ABOUT</a></li>
-   <li><a href="../index.html#log">LOG</a></li>
-   <li><a href="../index.html#update">UPDATE</a></li>
-  </ul>
- </nav>
+ <h3 class="name">テンプレート</h3>
+ <image src="../image/member/noimage.bmp" align="left" class="nameimg">
+ <ul class="nameul">
+  <li><div class="nameset">学年</div><div class="nameset2">------</div></li>
+  <li><div class="nameset">Twitter</div><div class="nameset2">------</div></li>
+  <li><div class="nameset">GitHub</div><div class="nameset2">------</div></li>
+  <li><div class="nameset">コメント</div><div class="nameset2">------</div></li>
+ </ul>
+
+ <div id="target_nav"></div>
 
  <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
