--- a/html/html/subpage_template.html
+++ b/html/html/subpage_template.html
@@ -4,25 +4,18 @@
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../css/base.css">
  <link rel="stylesheet" type="text/css" href="../css/scroll.css">
+ <script type="text/javascript" src="../js/include.js"></script>
  <link rel="shortcut icon" href="../image/icon.ico" type="/image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
-<body class="body_index">
+<body class="body_index" onload="include();">
 
  <div style="padding-bottom: 64px;"></div>
 
  <h2>タイトル</h2>
  <div style="text-align:right;"><small>日付</small></div>
 
- <nav class="navbar">
-  <h1 class="navh1">人工知能同好会</h1>
-  <ul class="navul nav">
-   <li><a href="../index.html#top">TOP</a></li>
-   <li><a href="../index.html#about">ABOUT</a></li>
-   <li><a href="../index.html#log">LOG</a></li>
-   <li><a href="../index.html#update">UPDATE</a></li>
-  </ul>
- </nav>
+ <div id="target_nav"></div>
 
  <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
