テスト用ページ追加

--- a/html/html/member.html
+++ b/html/html/member.html
@@ -19,7 +19,7 @@
  <h3 class="name">えび</h3>
  <image src="../image/member/ebi.png" align="left" class="nameimg">
  <ul class="nameul">
-  <li><div class="nameset">Twitter</div><div class="nameset2">@------</div></li>
+  <li><div class="nameset">Twitter</div><div class="nameset2">------</div></li>
   <li><div class="nameset">Email</div><div class="nameset2">------</div></li>
  </ul>
 
