--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,9 @@
   <div class="card"><a href="html/member.html"><img src="image/test02.png"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
   <div class="card"><a href="html/plans.html"><img src="image/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
+ </div>
  
-<div id="log">
+ <div id="log">
  <h2>活動記録</h2>
  <div class="parent">
   <div class="card"><a href="html/log_18-0330a.html"><img src="image/test.png"><h1>機械学習 #3</h1><h3>2018.03.31</h3><p>カード枚数を増やした時のテスト。</p></a></div>
@@ -32,6 +33,7 @@
   <div class="card"><a href="html/log_18-0222a.html"><img src="image/test03.png"><h1>新しいPCパーツ</h1><h3>2018.02.22</h3><p>PCIx1でUSB3.0を2つ増設しました。</p></a></div>
   <div class="card"><a href="html/log_18-0211a.html"><img src="image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
   <div class="card"><a href="html/"><img src="image/test06.png"><h1>札幌の夜景</h1><h3>2018.02.07</h3><p>ステラプレイス展望台にて</p></a></div>
+ </div>
  </div>
 
  <div id="update">
@@ -43,6 +45,7 @@
   <li>2018.02.11 活動記録「グラボを挿した結果...」を追加しました。</li>
   <li>2018.01.15 人工知能同好会のページを作成しました。</li>
  </ul>
+ </div>
 
  <nav class="navbar">
   <h1 class="navh1">人工知能同好会</h1>
