IEでframeの境界線が残る問題を解決
framesetにboder=0で解決

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
  <link rel="shortcut icon" href="image/icon.ico" type="image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
-<frameset rows="72,*" frameborder=0>
+<frameset rows="72,*" frameborder="0" border="0">
  <frame src="html/navbar.html" name="frame_navbar" noresize="noresize" scrolling="no">
  <frame src="html/home.html" name="frame_main">
  <noframes>
