ファイル名の変更
文字数を統一して見やすくした

--- a/html/html/home.html
+++ b/html/html/home.html
@@ -24,9 +24,9 @@
  <div id="log">
  <h2>活動記録</h2>
  <div class="parent">
-  <div class="card"><a href="./log_18-0331b.html"><img src="../image/test.png"><h1>機械学習 #3</h1><h3>2018.03.31</h3><p>カード枚数を増やした時のテスト。</p></a></div>
-  <div class="card"><a href="./log_18-0331a.html"><img src="../image/test.png"><h1>機械学習 #2</h1><h3>2018.03.31</h3><p>何も作ってないよ？</p></a></div>
-  <div class="card"><a href="./log_18-0330a.html"><img src="../image/test.png"><h1>機械学習 #1</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
+  <div class="card"><a href="./log_18-0331b.html"><img src="../image/test00.png"><h1>機械学習 #3</h1><h3>2018.03.31</h3><p>カード枚数を増やした時のテスト。</p></a></div>
+  <div class="card"><a href="./log_18-0331a.html"><img src="../image/test00.png"><h1>機械学習 #2</h1><h3>2018.03.31</h3><p>何も作ってないよ？</p></a></div>
+  <div class="card"><a href="./log_18-0330a.html"><img src="../image/test00.png"><h1>機械学習 #1</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
   <div class="card"><a href="./log_18-0326a.html"><img src="../image/test05.png"><h1>チキン南蛮</h1><h3>2018.03.26</h3><p>昭和タウンプラザにて</p></a></div>
   <div class="card"><a href="./log_18-0222a.html"><img src="../image/test03.png"><h1>新しいPCパーツ</h1><h3>2018.02.22</h3><p>PCIx1でUSB3.0を2つ増設しました。</p></a></div>
   <div class="card"><a href="./log_18-0211a.html"><img src="../image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
