不要になったJavaScriptを削除
oionloadでinclude関数を実行していたがそれを消した

--- a/html/html/#subpage_template.html
+++ b/html/html/#subpage_template.html
@@ -7,7 +7,7 @@
  <link rel="shortcut icon" href="../image/icon.ico" type="/image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
-<body class="body_index" onload="include();">
+<body class="body_index">
 
  <h2>タイトル</h2>
  <div style="text-align:right;"><small>日付</small></div>
