--- a/html/html/member.html
+++ b/html/html/member.html
@@ -8,7 +8,7 @@
  <link rel="shortcut icon" href="../image/icon.ico" type="/image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
-<body class="body_index" onload="include();">
+<body class="body_index">
 
  <h2>メンバー紹介</h2>
  <p>同好会のメンバーを紹介します。</p>
@@ -25,7 +25,7 @@
  <ul class="nameul">
   <li><div class="nameset">Twitter</div><div class="nameset2"><a href="https://twitter.com/0x0553" target="_blank">@0x0553</a></div></li>
   <li><div class="nameset">GitHub</div><div class="nameset2"><a href="https://github.com/TomSuzuki" target="_blank">https://github.com/TomSuzuki</a></div></li>
-  <li><div class="nameset">コメント</div><div class="nameset2">Webページを作らせていただきました。使ったツールは基本的にメモ帳です...。他にも使えるツールを増やしたい...。最近はアルバイトを入れすぎて何もできてません...。</div></li>
+  <li><div class="nameset">コメント</div><div class="nameset2">Webページを作らせていただきました。使ったツールは基本的にメモ帳です...。他にも使えるツールを増やしたい...。</div></li>
  </ul>
 
  <h3 class="name">テンプレート</h3>
