仮のロゴを追加
クリックでtopページ、レイアウトも少し変更

--- a/html/html/navbar.html
+++ b/html/html/navbar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <nav class="navbar">
- <h1 class="navh1">人工知能同好会</h1>
+ <a target="frame_main" href="./home.html"><img class="navimg" src="../image/logo.png"></a>
  <ul class="navul nav">
   <li><a target="frame_main" href="./home.html#top">TOP</a></li>
   <li><a target="frame_main" href="./home.html#about">ABOUT</a></li>
