--- a/html/html/home.html
+++ b/html/html/home.html
@@ -16,33 +16,23 @@
  <div id="about">
  <h2>紹介</h2>
  <div class="parent">
-  <div class="card"><a href="./kangei.html"><img src="../image/test02.png"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
-  <div class="card"><a href="./member.html"><img src="../image/test02.png"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
-  <div class="card"><a href="./plans.html"><img src="../image/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
+  <div class="card"><a href="./kangei.html"><img src="../image/thumbnail/test02.png"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
+  <div class="card"><a href="./member.html"><img src="../image/thumbnail/test02.png"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
+  <div class="card"><a href="./plans.html"><img src="../image/thumbnail/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
  </div>
  
  <div id="log">
  <h2>活動記録</h2>
  <div class="parent">
-  <div class="card"><a href="./log_18-0331b.html"><img src="../image/test00.png"><h1>機械学習 #3</h1><h3>2018.03.31</h3><p>カード枚数を増やした時のテスト。</p></a></div>
-  <div class="card"><a href="./log_18-0331a.html"><img src="../image/test00.png"><h1>機械学習 #2</h1><h3>2018.03.31</h3><p>何も作ってないよ？</p></a></div>
-  <div class="card"><a href="./log_18-0330a.html"><img src="../image/test00.png"><h1>機械学習 #1</h1><h3>2018.03.30</h3><p>機械学習の練習プログラムを作りました。</p></a></div>
-  <div class="card"><a href="./log_18-0326a.html"><img src="../image/test05.png"><h1>チキン南蛮</h1><h3>2018.03.26</h3><p>昭和タウンプラザにて</p></a></div>
-  <div class="card"><a href="./log_18-0222a.html"><img src="../image/test03.png"><h1>新しいPCパーツ</h1><h3>2018.02.22</h3><p>PCIx1でUSB3.0を2つ増設しました。</p></a></div>
-  <div class="card"><a href="./log_18-0211a.html"><img src="../image/test04.png"><h1>グラボを挿した結果...</h1><h3>2018.02.11</h3><p>ケースに入らなくなりました。とりあえずダイソーのかごでどうにか...</p></a></div>
-  <div class="card"><a href="./log_18-0207a.html"><img src="../image/test06.png"><h1>札幌の夜景</h1><h3>2018.02.07</h3><p>ステラプレイス展望台にて</p></a></div>
+  <div class="card"><a href="./log_180404a.html"><img src="../image/thumbnail/test00.png"><h1>ホームページの作成</h1><h3>2018.04.04</h3><p>人工知能同好会のホームページを作成しました。</p></a></div>
  </div>
  </div>
 
  <div id="update">
  <h2>更新記録</h2>
  <ul class="logul">
-  <li>2018.03.31 メンバー紹介のページを更新しました。</li>
-  <li>2018.03.30 活動記録「機械学習 No.001」を追加しました。</li>
-  <li>2018.02.22 活動記録「新しいPCパーツ」を追加しました。</li>
-  <li>2018.02.11 活動記録「グラボを挿した結果...」を追加しました。</li>
-  <li>2018.01.15 人工知能同好会のページを作成しました。</li>
+  <li>2018.04.04 人工知能同好会のページを作成しました。</li>
  </ul>
  </div>
 
