--- a/html/html/navbar.html
+++ b/html/html/navbar.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="../css/base.css">
  <link rel="stylesheet" type="text/css" href="../css/scroll.css">
+ <link rel="stylesheet" type="text/css" href="../css/navbar.css">
  <link rel="shortcut icon" href="../image/icon.ico" type="image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
