--- a/html/html/home.html
+++ b/html/html/home.html
@@ -17,7 +17,7 @@
  <div id="about">
  <h2>紹介</h2>
  <div class="parent">
-  <div class="card"><a href="./kangei.html"><img src="../image/thumbnail/test02.png"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
+  <div class="card"><a href="./introduction.html"><img src="../image/thumbnail/test02.png"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
   <div class="card"><a href="./member.html"><img src="../image/thumbnail/test02.png"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
   <div class="card"><a href="./plans.html"><img src="../image/thumbnail/test02.png"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
