ナビゲーションバーの背景色
高さが足りないと線が出たのは背景色が理由だった...

--- a/html/html/navbar.html
+++ b/html/html/navbar.html
@@ -8,7 +8,7 @@
  <link rel="shortcut icon" href="../image/icon.ico" type="image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
-<body>
+<body class="navbody">
  <nav class="navbar">
  <a target="frame_main" href="./home.html"><img class="navimg" src="../image/logo.png"></a>
  <ul class="navul nav">
