注意書き編集
JavaScriptはもう使ってないので

--- a/html/html/home.html
+++ b/html/html/home.html
@@ -11,8 +11,7 @@
 <body class="body_index">
 
  <div id="top">
- <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。<br>
- JavaScriptを使用して表示している部分があります。</p>
+ <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。</p>
 
  <div id="about">
  <h2>紹介</h2>
