bmp画像をjpg画像に変更
画質落としてファイルサイズ削るかも

--- a/html/html/home.html
+++ b/html/html/home.html
@@ -16,16 +16,16 @@
  <div id="about">
  <h2>紹介</h2>
  <div class="parent">
-  <div class="card"><a href="./introduction.html"><img src="../image/thumbnail/noimage2.bmp"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
-  <div class="card"><a href="./member.html"><img src="../image/thumbnail/noimage2.bmp"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
-  <div class="card"><a href="./plans.html"><img src="../image/thumbnail/noimage2.bmp"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
+  <div class="card"><a href="./introduction.html">	<img src="../image/thumbnail/noimage2.jpg"><h1>サークル紹介</h1><h3>2018.04.04</h3><p>サークルの活動内容等の紹介です</p></a></div>
+  <div class="card"><a href="./member.html">		<img src="../image/thumbnail/noimage2.jpg"><h1>メンバー紹介</h1><h3>2018.03.31</h3><p>同好会メンバーの紹介です。</p></a></div>
+  <div class="card"><a href="./plans.html">		<img src="../image/thumbnail/noimage2.jpg"><h1>今後の予定</h1><h3>2018.03.30</h3><p>今後の予定です。</p></a></div>
  </div>
  </div>
  
  <div id="log">
  <h2>活動記録</h2>
  <div class="parent">
-  <div class="card"><a href="./log_180404a.html"><img src="../image/thumbnail/test00.png"><h1>ホームページの作成</h1><h3>2018.04.04</h3><p>人工知能同好会のホームページを作成しました。</p></a></div>
+  <div class="card"><a href="./log_180404a.html"><img src="../image/thumbnail/test00.jpg"><h1>ホームページの作成</h1><h3>2018.04.04</h3><p>人工知能同好会のホームページを作成しました。</p></a></div>
  </div>
  </div>
 
