リンク上にマウスが乗った時文字色が変わるようにした
マウスが乗っているかわかりにくかったから変更

--- a/html/html/introduction.html
+++ b/html/html/introduction.html
@@ -9,8 +9,10 @@
 </head>
 <body class="body_index">
 
- <h2>タイトル</h2>
- <div style="text-align:right;"><small>日付</small></div>
+ <h2>サークル紹介</h2>
+ <div style="text-align:right;"><small>2018/0404</small></div>
+
+ <p></p>
 
  <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
