ページ内容編集

--- a/html/html/home.html
+++ b/html/html/home.html
@@ -11,7 +11,8 @@
 <body class="body_index">
 
  <div id="top">
- <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。</p>
+ <p>人工知能同好会（仮）のホームページです。IE10以降のWebブラウザから見ることを想定しています。
+各タイルをクリックすることで詳細ページに飛ぶことができます。</p>
 
  <div id="about">
  <h2>紹介</h2>
