--- a/html/html/introduction.html
+++ b/html/html/introduction.html
@@ -10,7 +10,7 @@
 <body class="body_index">
 
  <h2>サークル紹介</h2>
- <div style="text-align:right;"><small>2018/0404</small></div>
+ <div style="text-align:right;"><small>2018.04.04</small></div>
 
  <p>
 [人工知能サークル]<br>
