--- a/html/html/member.html
+++ b/html/html/member.html
@@ -11,6 +11,8 @@
 <body class="body_index">
 
  <h2>メンバー紹介</h2>
+ <div style="text-align:right;"><small>2018.04.04</small></div>
+
  <p>同好会のメンバーを紹介します。</p>
 
  <h3 class="name">えび</h3>
