--- a/html/html/plans.html
+++ b/html/html/plans.html
@@ -9,8 +9,18 @@
 </head>
 <body class="body_index">
 
- <h2>タイトル</h2>
- <div style="text-align:right;"><small>日付</small></div>
+ <h2>今後の予定</h2>
+ <div style="text-align:right;"><small>2018.04.04</small></div>
+
+ <p>サークル活動の予定です。</p>
+
+ <div id="update">
+ <ul class="logul">
+  <li>2018.04.06 新入生歓迎会後のサークル勧誘</li>
+  <li>2018.04.** 顔合わせ</li>
+  <li>2018.05.** 勉強会</li>
+ </ul>
+ </div>
 
  <footer>Copyright 2018 人工知能同好会（仮） All Rights Reserved.</footer>
 
