--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
  <link rel="stylesheet" type="text/css" href="css/base.css">
  <link rel="stylesheet" type="text/css" href="css/scroll.css">
  <link rel="shortcut icon" href="image/icon.ico" type="image/vnd.microsoft.icon">
+ <meta name="viewport" content="width=device-width">
  <title>人工知能同好会</title>
 </head>
 <frameset rows="72,*" frameborder="0" border="0">
