スマートフォン用のcss追加
カードは中央ぞろえするようにした。ナビゲーションバーはロゴ以外非表示にする予定（未完成）。

--- a/html/html/home.html
+++ b/html/html/home.html
@@ -5,6 +5,7 @@
  <link rel="stylesheet" type="text/css" href="../css/base.css">
  <link rel="stylesheet" type="text/css" href="../css/scroll.css">
  <link rel="stylesheet" type="text/css" href="../css/card.css">
+ <link rel="stylesheet" type="text/css" href="../css/smartphone.css">
  <link rel="shortcut icon" href="../image/icon.ico" type="image/vnd.microsoft.icon">
  <title>人工知能同好会</title>
 </head>
